# samplesheet

./: .travis.yml  README.md  pyproject.toml  tox.ini
docs/: Untitled.ipynb
samplesheet/: __init__.py  _read_structure.py  _sample.py  _samplesheet.py
samplesheet/util/: __init__.py
tests/: test_sample.py  test_util.py
